fix: 🐛 fix select flicker (#91)

--- a/packages/ui/select/select-option.module.css
+++ b/packages/ui/select/select-option.module.css
@@ -12,4 +12,5 @@
     display: inline-flex;
     align-items: center;
     justify-content: space-between;
+    user-select: none;
 }
